CompletedMade the project

--- a/WordleProject/appsettings.json
+++ b/WordleProject/appsettings.json
@@ -7,7 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=EVA-LAPTOP;Database=WordleDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=GIGI-DESKTOP;Database=WordleDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "ThisIsASuperSecureJWTSecretKey123456!",
+    "Issuer": "WordleAPI",
+    "Audience": "WordleClient",
+    "ExpiresInMinutes": 60
   }
 
 }
